<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/devices_fragment">

    <fragment
        android:id="@+id/devices_fragment"
        android:name="com.hug.mma.fragments.DevicesFragment"
        android:label="@string/my_devices"
        tools:layout="@layout/fragment_devices">
        <action
            android:id="@+id/action_devices_fragment_to_deviceSummaryFragment"
            app:destination="@id/deviceSummaryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/signin_fragment"
        android:name="com.hug.mma.fragments.SigninFragment"
        android:label="SignIn"
        tools:layout="@layout/fragment_signin"></fragment>
    <fragment
        android:id="@+id/deviceSummaryFragment"
        android:name="com.hug.mma.fragments.DeviceSummaryFragment"
        android:label="@string/device_details"
        tools:layout="@layout/fragment_device_summary" >
        <argument
            android:name="deviceId"
            app:argType="string" />
        <argument
            android:name="summaryType"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/device_managementFragment"
        android:name="com.hug.mma.fragments.DeviceManagementFragment"
        android:label="@string/device_management"
        tools:layout="@layout/fragment_device_management" />
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.hug.mma.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />



</navigation>